--- a/app/views/diary_entries/index.html.erb
+++ b/app/views/diary_entries/index.html.erb
@@ -88,7 +88,7 @@
         <p class="has-text-info has-text-weight-semibold">
           <em><%= diary_entry.entry_date.strftime("%A, %d %B %Y") %></em>
         </p>
-        <p><%= truncate(diary_entry.content.body.to_plain_text, length: 100) %></p>
+       <p><%= truncate(diary_entry.content.to_plain_text, length: 100) %></p>
         
         <% if diary_entry.images.attached? %>
           <div class="mt-2 mb-2">
@@ -102,7 +102,7 @@
             </div>
             <% diary_entry.images.first(3).each do |image| %>
               <% begin %>
-                <%= image_tag image.variant(:thumb), class: "image is-inline-block mr-1", style: "width: 50px; height: 50px; object-fit: cover; border-radius: 4px; border: 2px solid #dbdbdb;", loading: "lazy" %>
+                <%= image_tag image, class: "image is-inline-block mr-1", style: "width: 50px; height: 50px; object-fit: cover; border-radius: 4px; border: 2px solid #dbdbdb;", loading: "lazy" %>
               <% rescue => e %>
                 <div class="image is-inline-block mr-1" style="width: 50px; height: 50px; background: #ffebee; border-radius: 4px; border: 2px solid #dbdbdb; display: flex; align-items: center; justify-content: center;">
                   <i class="fas fa-exclamation-triangle has-text-danger" style="font-size: 12px;"></i>
