--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,11 +1,11 @@
-<% if Event.where(event_date: Time.current..3.days.from_now).any? %>
+<% if Event.where(start_time: Time.current..3.days.from_now).any? %>
   <div class="box has-background-warning-light mt-5">
     <h2 class="subtitle is-5 mb-2">Upcoming Events & Reminders (Next 3 Days)</h2>
     <ul>
-      <% Event.where(event_date: Time.current..3.days.from_now).order(:event_date).each do |event| %>
+      <% Event.where(start_time: Time.current..3.days.from_now).order(:start_time).each do |event| %>
         <li>
           <strong><%= event.title %></strong>
-          <span class="has-text-grey"> - <%= event.event_date.strftime("%b %d, %Y %H:%M") %></span>
+          <span class="has-text-grey"> - <%= event.start_time.strftime("%b %d, %Y %H:%M") %></span>
           <% if event.description.present? %>
             <div class="has-text-grey is-size-7"><%= event.description %></div>
           <% end %>
