--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,3 @@
-<!-- filepath: c:\Users\Test\projects\ruby\diary\diary_app\app\views\events\_form.html.erb -->
 <%= form_with(model: event, local: true) do |form| %>
   <div class="field">
     <%= form.label :title, class: "label" %>
@@ -8,9 +7,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :event_date, "Date & Time", class: "label" %>
+    <%= form.label :start_time, "Date & Time", class: "label" %>
     <div class="control">
-      <%= form.datetime_select :event_date, class: "input", required: true %>
+      <%= form.datetime_select :start_time, class: "input", required: true %>
     </div>
   </div>
 
