--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,15 +1,4 @@
-<%= form_with(model: @tag, local: true) do |form| %>
-  <% if @tag.errors.any? %>
-    <div class="notification is-danger">
-      <h2><%= pluralize(@tag.errors.count, "error") %> prohibited this tag from being saved:</h2>
-      <ul>
-        <% @tag.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_with(model: tag, local: true) do |form| %>
   <div class="field">
     <%= form.label :name, class: "label" %>
     <div class="control">
@@ -17,9 +6,12 @@
     </div>
   </div>
 
-  <div class="field">
+  <div class="field is-grouped mt-4">
     <div class="control">
       <%= form.submit class: "button is-primary" %>
+    </div>
+    <div class="control">
+      <%= link_to "Cancel", tags_path, class: "button is-light" %>
     </div>
   </div>
 <% end %>
